<resources>
    <string name="app_name">莱瑞直播</string>

    <string name="bottom_one">首页</string>
    <string name="bottom_two">榜单</string>
    <string name="bottom_third">直播</string>
    <string name="bottom_four">小视频</string>
    <string name="bottom_five">我</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="live">直播</string>
    <string name="radio">电台</string>
    <string name="smallVideo">小视频</string>
    <string name="clickRetry">点击重试</string>
    <string name="register">注册</string>
    <string name="hintPhone">请输入手机号</string>
    <string name="hintVerificationCode">请输入验证码</string>
    <string name="sendVerificationCode">发送验证码</string>
    <string name="waitMoment">主播暂时离开, 请稍等片刻…</string>
    <string name="myAttention">我的关注</string>
    <string name="myFans">我的粉丝</string>
    <string name="emptyContent">亲 ~ 暂无任何内容</string>
    <string name="errorNet">网络链接错误,点击重试</string>
    <string name="inputSearch">请搜索用户名或ID</string>
    <string name="videoDetail">小视频详情</string>
    <string name="inputComment">请输入你的评论内容</string>
    <string name="sendComment">发送评论</string>
    <string name="replay">回播</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="accountNumber">账号</string>
    <string name="defaultDiamond">0钻石</string>
    <string name="defaultTicket">0印票</string>
    <string name="avatar">头像</string>
    <string name="nickName">昵称</string>
    <string name="gender">性别</string>
    <string name="signature">个性签名</string>
    <string name="birthday">生日</string>
    <string name="emotion">情感状态</string>
    <string name="hometown">家乡</string>
    <string name="career">职业</string>
    <string name="error_gif">\"长宽不小于 %1$dpx，且大小不超过 %2$sM。\"</string>
    <string name="editInfo">编辑</string>
    <string name="save">保存</string>
    <string name="noEmpty">昵称不能为空</string>
    <string name="editNick">编辑昵称</string>
    <string name="accountBalance">账户余额:</string>

    <string name="account">账户</string>
    <string name="income">收益</string>
    <string name="liveRecord">直播间收支记录</string>
    <string name="sendOut">送出</string>
    <string name="level">等级</string>
    <string name="approve">认证</string>
    <string name="ticketList">水滴贡献榜</string>
    <string name="shareIncome">分享收益</string>
    <string name="commodityManager">商品管理</string>
    <string name="myOrder">我的订单</string>
    <string name="shoppingCart">我的购物车</string>
    <string name="myAuction">我的竞拍</string>
    <string name="auctionManager">竞拍管理</string>
    <string name="myShop">我的小店</string>
    <string name="setting">设置</string>
    <string name="noApprove">未认证</string>
    <string name="choosePayMethod">请选择支付方式</string>
    <string name="choosePayAmount">请选择支付金额</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="recharge">充值</string>
    <string name="customAmount">其他金额:￥</string>
    <string name="defaultScanNum">0人在看</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="earnings">获得%s印票</string>
    <string name="agree_protocol">已阅读并同意</string>
    <string name="privateSetting">私密</string>
    <string name="choose_category">选择分类</string>
    <string name="titleTips">给直播写个标题吧</string>
    <string name="choose_cover">修改封面</string>
    <string name="startLive">开始直播</string>
    <string name="QQShare">QQ分享已开启</string>
    <string name="wechatShare">微信分享已开启</string>
    <string name="commentsShare">朋友圈分享已开启</string>
    <string name="qqZoneShare">QQ空间分享已开启</string>
    <string name="weiboShare">微博分享已开启</string>
    <string name="chooseCategory">请选择分类</string>
    <string name="inputLiveTitle">请输入直播标题</string>
    <string name="accountSafe">账号安全</string>
    <string name="banList">黑名单</string>
    <string name="pushManager">推送管理</string>
    <string name="helpFeedback">帮助与反馈</string>
    <string name="update">检查更新</string>
    <string name="aboutUs">关于我们</string>
    <string name="exitLogin">退出登录</string>
    <string name="safeLevel">安全等级:低</string>
    <string name="safeTips">通过以下设置可提高安全等级</string>

    <string name="patternTwoDigits">"##.##"</string>
    <string name="inputRealName">请输入真实姓名</string>
    <string name="realName">真实姓名</string>
    <string name="phoneNumber">联系方式</string>
    <string name="inputPhoneNumber">请输入手机号码</string>
    <string name="idCardFront">身份证正面</string>
    <string name="idCardBack">身份证背面</string>
    <string name="idHandCard">手持身份证</string>
    <string name="confirm">确认</string>
    <string name="uploadFront">请上传身份证正面图</string>
    <string name="uploadBack">请上传身份证背面图</string>
    <string name="uploadHand">请上传手持身份证图</string>
    <string name="approveLiveAuthor">认证主播</string>
    <string name="share">分享</string>
    <string name="backHome">返回首页</string>
    <string name="liveFinish">直播已结束</string>
    <string name="scanNum">观看人数</string>
    <string name="defaultNum">0</string>
    <string name="getNum">获得印票</string>
    <string name="cancel">取消</string>
    <string name="define">确定</string>
    <string name="danmu">弹幕</string>
    <string name="sayContent">和大家说点什么</string>
    <string name="send">发送</string>
    <string name="baseTool">基础工具</string>
    <string name="gameList">游戏与功能列表</string>
    <string name="ignoreMsg">忽略未读</string>
    <string name="beautyGlamorous">美颜:</string>
    <string name="beautyWhiten">美白:</string>
    <string name="beautyRuddy">红润:</string>
    <string name="isMsgNull">发送消息不能为空</string>
    <string name="defaultPercent">100%</string>
    <string name="natural">自然</string>
    <string name="smooth">光滑</string>
    <string name="hazy">朦胧</string>

</resources>
