<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_transparent_fillet5"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/rgStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbSmooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/smooth"
            android:textColor="@drawable/selector_black_gray_text_color" />

        <RadioButton
            android:id="@+id/rbNatural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/natural"
            android:textColor="@drawable/selector_black_gray_text_color" />

        <RadioButton
            android:id="@+id/rbHazy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/hazy"
            android:textColor="@drawable/selector_black_gray_text_color" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llGlamorous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/beautyGlamorous"
            android:textColor="@color/color_black"
            android:textSize="13sp"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/sbBeauty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progressDrawable="@drawable/bg_seekbar_main_color"
            android:thumb="@drawable/ic_seekbar_thumb_main_color" />

        <TextView
            android:id="@+id/tvBeautyPercent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/defaultPercent"
            android:textColor="@color/color_black"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWhitening"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llGlamorous">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/beautyWhiten"
            android:textColor="@color/color_black"
            android:textSize="13sp"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/sbWhitening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progressDrawable="@drawable/bg_seekbar_main_color"
            android:thumb="@drawable/ic_seekbar_thumb_main_color" />

        <TextView
            android:id="@+id/tvWhiteningPercent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/defaultPercent"
            android:textColor="@color/color_black"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRuddy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llWhitening">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/beautyRuddy"
            android:textColor="@color/color_black"
            android:textSize="13sp"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/sbRuddy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progressDrawable="@drawable/bg_seekbar_main_color"
            android:thumb="@drawable/ic_seekbar_thumb_main_color" />

        <TextView
            android:id="@+id/tvRuddyPercent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/defaultPercent"
            android:textColor="@color/color_black"
            android:textSize="13sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBeautyType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRuddy"
        tools:listitem="@layout/item_beauty_type" />
</android.support.constraint.ConstraintLayout>