<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wanou.framelibrary.weight.SimpleMultiStateView
        android:id="@+id/SimpleMultiStateView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                app:counterEnabled="true"
                app:counterMaxLength="11">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_user_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:hint="@string/hintPhone"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputVerificationCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etVerificationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/dp_4"
                        android:gravity="center_vertical"
                        android:hint="@string/hintVerificationCode"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvSendVerCode"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:padding="@dimen/dp_3"
                    android:text="@string/sendVerificationCode"
                    app:layout_constraintBottom_toBottomOf="@id/textInputVerificationCode"
                    app:layout_constraintEnd_toEndOf="@id/textInputVerificationCode"
                    app:layout_constraintTop_toTopOf="@id/textInputVerificationCode" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </com.wanou.framelibrary.weight.SimpleMultiStateView>
</android.support.constraint.ConstraintLayout>