<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar" />

        <LinearLayout
            android:id="@+id/llRealName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <TextView
                android:id="@+id/tvRealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realName"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etRealName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputRealName"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/color_black"
                android:textColorHint="@color/colorGray3"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llRealName">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputPhoneNumber"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/color_black"
                android:textColorHint="@color/colorGray3"
                android:textSize="16sp" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clCardFront"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_frame_black_white20"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llPhoneNumber">


            <ImageView
                android:id="@+id/ivCardFront"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_add_image"
                app:layout_constraintDimensionRatio="W,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/idCardFront"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCardFront" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clCardBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_frame_black_white20"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCardFront">


            <ImageView
                android:id="@+id/ivCardBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_add_image"
                app:layout_constraintDimensionRatio="W,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/idCardBack"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCardBack" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clHandCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_frame_black_white20"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCardBack">


            <ImageView
                android:id="@+id/ivHandCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_add_image"
                app:layout_constraintDimensionRatio="W,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/idHandCard"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivHandCard" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_press"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/confirm"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clHandCard"
            app:layout_goneMarginBottom="10dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>