<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:text="@string/liveFinish"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.lairui.livetest1.ui.panel.CircleImageView
            android:id="@+id/ivUserIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/chatroom_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView15" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUserIcon" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/scanNum"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@id/view10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <TextView
            android:id="@+id/tvScanNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/defaultNum"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@id/view10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView16" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/getNum"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view10"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <TextView
            android:id="@+id/tvGetNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/defaultNum"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view10"
            app:layout_constraintTop_toBottomOf="@id/textView17" />

        <View
            android:id="@+id/view10"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorGray3"
            app:layout_constraintBottom_toBottomOf="@id/tvScanNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView16" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_yellow_frame20"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share"
            android:textColor="@color/color_yellow"
            app:layout_constraintBottom_toTopOf="@id/tvBackHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view10"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvBackHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_white_transparent_round20"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/backHome"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShare" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>